# cdupage

./: .env.example  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  build.rs
.github/workflows/: build.yml  format.yml  rust.yml
crates/cdupage/: Cargo.toml  build.rs
crates/cdupage/src/: lib.rs
crates/cdupage/src/deserializers/: mod.rs  person.rs  timeline.rs  timetable.rs
crates/cdupage/src/traits/: login.rs  timetable.rs
crates/cdupage/src/types/: mod.rs  person.rs  timeline.rs  timetable.rs
crates/ffi/: Cargo.toml  build.rs  defs.h
crates/ffi-sys/: Cargo.toml  binds.hpp
crates/ffi-sys/src/: lib.rs
crates/ffi/src/: lib.rs
ffi/: Cargo.toml  defs.h
ffi-sys/: Cargo.toml  build.rs
ffi-sys/src/: lib.rs
ffi/src/: lib.rs
src/: cdupage.rs  edupage.c  edupage.h  edupage.rs  edupage_deserializers.rs  edupage_traits.rs  edupage_types.rs  lib.rs  lunches.rs  macro_aliases.rs  request.c  request.h  reqwest.rs  util.h
src/deserializers/: date.rs  dbi.rs  mod.rs  person.rs  timeline.rs  timetable.rs
src/edupage_types/: dbi.rs  mod.rs  person.rs  timeline.rs  timetable.rs
src/node/: mod.rs
src/node_bindings/: edupage_types.rs  mod.rs  trait_implementations.rs
src/trait_implementations/: dbi.rs  login.rs  mod.rs  ringing.rs  substitution.rs  timeline.rs  timetable.rs
src/traits/: cdn.rs  dbi.rs  login.rs  lunches.rs  mod.rs  ringing.rs  substitution.rs  timeline.rs  timetable.rs
src/types/: cloud.rs  dbi.rs  lunches.rs  mod.rs  person.rs  timeline.rs  timetable.rs
src/yyjson/: yyjson.c  yyjson.h
