[package]
name = "cdupage"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(any(windows, unix))'.dependencies]
reqwest = { version = "0.12.7", features = ["blocking", "json", "cookies", "multipart"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde_json = "1.0.74"
serde = { version = "1.0", features = ["derive"] }
num_enum = "0.7.3"
serde_urlencoded = "0.7.0"
serde-aux = "4.5.0"
node-bindgen = { version = "6.1.0", optional = true }
common_macros = "0.1.1"
ts-rs = { version = "10.1.0", optional = true, default-features = false, features = ["format", "serde-json-impl", "chrono-impl"] }
[dev-dependencies]
assert_matches = "1.5"
dotenv = "0.15.0"

[build-dependencies]
node-bindgen = { version = "6.1.0", default-features = false, features = ["build"], optional = true}
cbindgen = { version = "0.28.0" , optional = true }
[lib]
crate-type = ["lib", "cdylib"]

[features]
default = []
node-types = ["dep:ts-rs"]
node = ["dep:node-bindgen"]
c_any_other_lang = ["dep:cbindgen"]
[dependencies]
macro_rules_attribute = "0.2.0"
serde_literals = "0.1.1"
